--- a/sections/rpr.tex
+++ b/sections/rpr.tex
@@ -36,7 +36,7 @@
   Let $(X, T)$ be a TDS.
   The set $Q_2(X)$ is an intersection of closed sets and therefore closed.
   It is reflexive, since $\Delta(X) \subseteq \overline{TU}$ for each $U \in \mathcal{U}(\Delta(X))$.
-  The relation is symmetric since the definition is symmetric with regard to $x$ and $y$.
+  The relation is symmetric since the definition is symmetric with respect to $x$ and $y$.
   For invariance, let $(x, y) \in Q_2(X)$ and $t \in T$.
   Choose sequences as defined in $\ref{eq:rprchar}$.
   Then for $(tx_n)_n$, $(t y_n)_n$ and $(t_nt^{-1})_n$ we have $t x_n \to tx$ and $t y_n \to ty$ with $d(t_nt^{-1}x_n, t_nt^{-1}y_n) = d(x_n, y_n) \to 0$.
@@ -59,6 +59,7 @@ Note that in general the regionally proximal relation is not transitive.
 \end{proof}
 
 \begin{theorem}
-  Let $(X, T)$ be a minimal TDS with an invariant measure.
-  Then $Q_2(X)$ is an ICER.
+  Let $(X, T)$ be a minimal TDS with an invariant Borel measure
+  and $R$ be the ICER associated with the MEF of $X$.
+  Then $Q_2(X) = R$.
 \end{theorem}
