--- a/main.tex
+++ b/main.tex
@@ -87,6 +87,7 @@
 \DeclareMathOperator{\out}{out}
 \DeclareMathOperator{\supp}{supp}
 \DeclareMathOperator{\range}{range}
+\DeclareMathOperator{\pr}{pr}
 
 
 \newcommand{\catname}[1]{\mathbf{#1}}
