Corrected proof of Proposition 1.6

--- a/sections/equicontinuity.tex
+++ b/sections/equicontinuity.tex
@@ -45,7 +45,7 @@
 	Let $(X, T)$ be a TDS. Let $R \subset X \times X$ be a $T$-invariant (i.e. $\forall t \in T, \forall (x, x^\prime ) \in R : (tx, tx^\prime) \in R$) and closed equivalence relation (ICER). Then the \emph{quotient} $(X/R, T)$ with $T$-action defined by $t[x] := [tx]$ is a TDS.
 \end{proposition}
 \begin{proof}
-	Let $\pi_R: X \to X/R$ be the projection, which is continuous. The quotient $X/R$ is a Hausdorff space, because $X$ is a compact Hausdorff space and $R$ is closed (not trivial). The compactness of $X/R$ follows from $X/R = \pi(X)$ and the compactness of $X$ together with the continuity of $\pi$. The $T$-invariance of $R$ implies the well-definedness of the $T$-action. To show that the $T$ action is continuous: Define the equivalence relation
+	Let $\pi_R: X \to X/R$ be the projection, which is continuous. The quotient $X/R$ is a metrizable space, since $X$ is a metric space and $R$ is closed (not trivial). The compactness of $X/R$ follows from $X/R = \pi(X)$ and the compactness of $X$ together with the continuity of $\pi$. The $T$-invariance of $R$ implies the well-definedness of the $T$-action. To show that the $T$ action is continuous: Define the equivalence relation
 	\begin{equation*}
 		R^\prime := \{ ((t_1,x_1), (t_2,x_2)) \in (T \times X) \times (T \times X): (x_1, x_2) \in R, t_1 = t_2\}.
 	\end{equation*}
