Added section on m-equicontinuity and some basic results and definitions

--- a/main.tex
+++ b/main.tex
@@ -104,5 +104,6 @@
 \subfile{sections/equicontinuity}
 \subfile{sections/mef.tex}
 \subfile{sections/rpr.tex}
+\subfile{sections/m-equicontinuity}
 
 \end{document}
