--- a/main.tex
+++ b/main.tex
@@ -22,6 +22,7 @@
 \usepackage{thmtools} %list of theorems etc.
 \usepackage{multicol}
 \usepackage{comment}
+\usepackage{cleveref}
 \usepackage[a4paper, margin=1in]{geometry} %page margins
 %\usepackage[
 %backend=biber,
@@ -88,7 +89,6 @@
 \DeclareMathOperator{\supp}{supp}
 \DeclareMathOperator{\range}{range}
 \DeclareMathOperator{\pr}{pr}
-
 
 \newcommand{\catname}[1]{\mathbf{#1}}
 
