--- a/sections/equicontinuity.tex
+++ b/sections/equicontinuity.tex
@@ -53,6 +53,7 @@
 \end{proof}
 
 \begin{proposition}[Connection between Factors and ICERs]
+	\label{prop:factorsAndIcers}
 	Let $(X, T)$ be a TDS. If $R \subset X \times X$ is an ICER, then the quotient map $\pi_R: X \to X/R$ defines a factor of map.
 	
 	If $(Y, T)$ is a factor of $(X, T)$ with factor map $\pi: X \to Y$, then
@@ -130,6 +131,7 @@
 \end{remark}
 
 \begin{proposition}[Isomorphism invariance of equicontinuity]
+	\label{prop:equiContConjugationInvariance}
 	Let $(X, T)$ and $(Y, T)$ be two isomorphic topological dynamical systems. If $(X, T)$ is equicontinuous, so is $(Y, T)$.
 \end{proposition}
 \begin{proof}
@@ -143,6 +145,7 @@
 \end{proof}
 
 \begin{proposition}[Products of equicontinuous systems]
+	\label{prop:productsOfEquiContAreEquiCont}
 	Let $(X_n, T)_{n \in \mathbb{N}}$ be a family of equicontinuous dynamical systems. Then the product $(\prod_{n \in \mathbb{N}} X_n, T)$ is also equicontinuous.
 \end{proposition}
 \begin{proof}
@@ -173,6 +176,7 @@
 \end{remark}
 
 \begin{proposition}[Subsystems of equicontinuous systems]
+	\label{prop:SubsystemOfEquiContIsEquiCont}
 	Let $(X, T)$ be an equicontinuous dynamical systems and $A \subseteq X$ a closed $T$-invariant set. Then $(A, T)$ is equicontinuous.
 \end{proposition}
 \begin{proof}
