--- a/sections/rpr.tex
+++ b/sections/rpr.tex
@@ -18,7 +18,7 @@
 \end{theorem}
 
 \begin{proof}
-  For the first step, we see that Definition \ref{def:rpr} is equivalent to the following characterization:
+  For the first step, we see that \cref{def:rpr} is equivalent to the following characterization:
   The pair $(x, y) \in X \times X$ is regionally proximal if and only if there are sequences $(x_n)_n, (y_n)_n$ in $X$ and $(t_n)_n$ in $T$
   such that
   \begin{equation}
@@ -38,7 +38,7 @@
   It is reflexive, since $\Delta(X) \subseteq \overline{TU}$ for each $U \in \mathcal{U}(\Delta(X))$.
   The relation is symmetric since the definition is symmetric with respect to $x$ and $y$.
   For invariance, let $(x, y) \in Q_2(X)$ and $t \in T$.
-  Choose sequences as defined in $\ref{eq:rprchar}$.
+  Choose sequences as defined in \cref{eq:rprchar}.
   Then for $(tx_n)_n$, $(t y_n)_n$ and $(t_nt^{-1})_n$ we have $t x_n \to tx$ and $t y_n \to ty$ with $d(t_nt^{-1}x_n, t_nt^{-1}y_n) = d(x_n, y_n) \to 0$.
 \end{proof}
 
